# AiQuant

./: .env.backup  .gitignore  README.md  env.example  pyproject.toml  requirements.txt
.cursor/plans/: ai_quant_company_multi-agent_5b94fd0d.plan.md  ai_quant_company_全面升级_80939626.plan.md  antigravity_+_tools_layer_e09c7d96.plan.md  digital_twin_dashboard_598a8e05.plan.md
agents/: __init__.py  base.py  intention.py  runtime.py
agents/backtest/: __init__.py
agents/board/: __init__.py
agents/data/: __init__.py
agents/leads/: __init__.py
agents/research/: __init__.py  researcher.py
agents/risk/: __init__.py
backtest/: __init__.py  engine.py  metrics.py  robustness.py
configs/: __init__.py  agents.yaml  budget_policy.yaml  models.yaml  permissions.yaml  risk_limits.yaml  scoring_weights.yaml
dashboard/: __init__.py
dashboard/api/: __init__.py  data_manager.py  database.py  main.py  models.py
dashboard/web/: next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
data/: __init__.py  approvals.json  meetings.json  reports.json  research_cycles.json  trading_plans.json  trading_signals.json  versioning.py
data/providers/: __init__.py  base.py  crypto.py
orchestrator/: __init__.py  agent_loop.py  capability.py  feedback.py  governance.py  intention.py  meeting.py  message_bus.py  people.py  performance.py  risk_governance.py  scheduler.py  state_machine.py  tool_router.py  topic_meeting.py  trading.py
reports/: __init__.py  generator.py
reports/templates/: __init__.py  board_pack.md.j2  capability_gap_report.md.j2  compliance_report.md.j2  (+4 more)
scripts/: aiquant.service  deploy_backend.sh  deploy_database_manual.sh  deploy_db.sh  init_database.py  run_agents.py  start_local.sh  stop_local.sh  test_mcp.py
storage/: __init__.py  db.py  schema.sql
tests/: __init__.py
tools/: __init__.py  backtest.py  intelligence.py  market.py  meeting.py  memory.py  registry.py  trading.py
(+29 files in other folders)
